# code-to-pdf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build-extra-artifacts.sh  dist-workspace.toml  hello.js  release-plz.toml  test-encode-decode.nu
.github/workflows/: check.yml  release-plz.yml
bench/: bench-flamegraph.nu  bench-hyperfine.nu
crates/c2pdf/: CHANGELOG.md  Cargo.toml
crates/c2pdf-gui/: Cargo.toml
crates/c2pdf-gui/src/: main.rs
crates/c2pdf/src/lib/: code_to_pdf.rs  dimensions.rs  font_loader.rs  helpers.rs  lib.rs  logging.rs  text_manipulation.rs
src/: bin.rs  code_to_pdf.rs  dimensions.rs  font_loader.rs  helpers.rs  lib.rs  main.rs  process_file.rs  text_manipulation.rs
src/lib/: code_to_pdf.rs  dimensions.rs  font_loader.rs  helpers.rs  lib.rs  logging.rs  text_manipulation.rs
test_folder/: hello.tsx
