[package]
name = "code-to-pdf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c2pdf"
path = "src/main.rs"

[dependencies]
argh = "0.1.13"
fontdue = "0.9.3"
ignore = "0.4.23"
printpdf = { git = "https://github.com/fschutt/printpdf" }
syntect = "5.2.0"
two-face = "0.4.3"

[profile.release]
lto = "fat"
