[package]
name = "code-to-pdf"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/Tommypop2/code-to-pdf"
[[bin]]
name = "c2pdf"
path = "src/main.rs"

[dependencies]
argh = "0.1.13"
fontdue = "0.9.3"
ignore = "0.4.23"
# printpdf = { git = "https://github.com/fschutt/printpdf", default-features = false}
# printpdf = { path = "../printpdf", default-features = false }
printpdf = { version = "0.8.2", default-features = false, features = [
	"jpeg",
	"png",
	"ico",
	"bmp",
] }
syntect = "5.2.0"
two-face = "0.4.3"

[profile.release]
lto = "fat"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
