[package]
name = "code-to-pdf"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/Tommypop2/code-to-pdf"
license = "MIT"
description = "Generates a syntax-highlighted PDF of your source code"
[lib]
name = "c2pdf"
path = "src/lib.rs"
[[bin]]
name = "c2pdf"
path = "src/bin.rs"

[dependencies]
argh = "0.1.13"
fontdue = "0.9.3"
ignore = "0.4.23"
# printpdf = { git = "https://github.com/fschutt/printpdf", default-features = false}
# printpdf = { path = "../printpdf", default-features = false }
printpdf = { version = "0.8.2", default-features = false, features = [
	"jpeg",
	"png",
	"ico",
	"bmp",
] }
syntect = "5.2.0"
two-face = "0.4.3"

[profile.release]
lto = "fat"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
